--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,134 +1,185 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nosotros - Thalassa Bio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header id="main-header" class="main-header">
-        <div class="container">
-            <div class="logo">
-                <a href="../index.html">
-                    <img src="../assets/images/logo-thalassa.webp" alt="Thalassa Bio">
-                </a>
-            </div>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="../index.html#inicio">Inicio</a></li>
-                    <li><a href="#" class="active">Nosotros</a></li>
-                    <li><a href="../index.html#productos">Productos</a></li>
-                </ul>
-            </nav>
+      <div class="container">
+        <div class="logo">
+          <a href="../index.html">
+            <img src="../assets/images/logo-thalassa.webp" alt="Thalassa Bio" />
+          </a>
         </div>
+        <nav>
+          <ul class="nav-menu">
+            <li><a href="../index.html#inicio">Inicio</a></li>
+            <li><a href="#" class="active">Nosotros</a></li>
+            <li><a href="../index.html#productos">Productos</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <!-- <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
+      <!-- <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
             <div class="container">
                 <h1>¿Quiénes somos?</h1>
                 <p><span>A través de la innovación sostenible, transformamos un problema ambiental en solución agrícola. En Thalassa Bio nos comprometemos con la nutrición balanceada para el desarrollo del campo peruano.</span></p>
             </div>
         </div> -->
 
-        <section class="about-hero">
-            <div class="about-hero-overlay">
-                <div class="about-hero-box">
-                    <h1>¿Quiénes somos?</h1>
-                    <p>
-                    En Thalassa Bio somos una empresa peruana dedicada a la agricultura sostenible. Transformamos de manera responsable el sargazo que llega a Paracas en un biofertilizante natural que nutre la tierra sin dañarla.
-
-                    Convertimos un desafío ambiental en una oportunidad: ofrecer un fertilizante ecológico, accesible y efectivo que mejora los cultivos, regenera los suelos y contribuye al cuidado del mar. Nuestra propuesta es simple: soluciones sostenibles para agricultores y amantes de los huertos que buscan trabajar en armonía con el ambiente.
-
-                    Impulsamos la innovación verde y el buen uso de los recursos naturales para promover una agricultura más sana y responsable.
-
-                    Con Thalassa Bio, fortaleces tus plantas y proteges el planeta.
-                    </p>
-                </div>
-            </div>
-        </section>
-
-
-        <div class="et_pb_section et_pb_section_1 et_section_regular">
-            <div class="container">
-                <div class="about-two-column-grid">
-                    <div class="about-image">
-                        <img src="../assets/images/Papas-Equiilibra.webp" alt="Campos peruanos" style="width: 100%; max-width: 100%; height: auto;">
-                    </div>
-                    <div class="about-text-content">
-                        <h2>Thalassa: De las playas a los campos</h2>
-                        <p>Thalassa Bio nace de una visión: convertir el sargazo acumulado en las playas de Paracas en un fertilizante ecológico que beneficie tanto al medio ambiente como a los agricultores peruanos.</p>
-                        <p>Utilizamos procesos innovadores para extraer nutrientes esenciales del sargazo, creando productos orgánicos que mejoran la fertilidad del suelo natural.</p>
-                    </div>
-                </div>
-            </div>
+      <section class="about-hero">
+        <div class="about-hero-overlay">
+          <div class="about-hero-box">
+            <h1>¿Quiénes somos?</h1>
+            <p>
+              En Thalassa Bio somos una empresa peruana dedicada a la
+              agricultura sostenible. Transformamos de manera responsable el
+              sargazo que llega a Paracas en un biofertilizante natural que
+              nutre la tierra sin dañarla. Convertimos un desafío ambiental en
+              una oportunidad: ofrecer un fertilizante ecológico, accesible y
+              efectivo que mejora los cultivos, regenera los suelos y contribuye
+              al cuidado del mar. Nuestra propuesta es simple: soluciones
+              sostenibles para agricultores y amantes de los huertos que buscan
+              trabajar en armonía con el ambiente. Impulsamos la innovación
+              verde y el buen uso de los recursos naturales para promover una
+              agricultura más sana y responsable. Con Thalassa Bio, fortaleces
+              tus plantas y proteges el planeta.
+            </p>
+          </div>
         </div>
+      </section>
 
-        <div class="et_pb_section et_pb_section_2 et_section_regular">
-            <div class="container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video institucional" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <div class="et_pb_section et_pb_section_1 et_section_regular">
+        <div class="container">
+          <div class="about-two-column-grid">
+            <div class="about-image">
+              <img
+                src="../assets/images/Papas-Equiilibra.webp"
+                alt="Campos peruanos"
+                style="width: 100%; max-width: 100%; height: auto"
+              />
             </div>
+            <div class="about-text-content">
+              <h2>Thalassa: De las playas a los campos</h2>
+              <p>
+                Thalassa Bio nace de una visión: convertir el sargazo acumulado
+                en las playas de Paracas en un fertilizante ecológico que
+                beneficie tanto al medio ambiente como a los agricultores
+                peruanos.
+              </p>
+              <p>
+                Utilizamos procesos innovadores para extraer nutrientes
+                esenciales del sargazo, creando productos orgánicos que mejoran
+                la fertilidad del suelo natural.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
 
-        <div class="et_pb_section et_pb_section_3 et_pb_with_background et_section_regular">
-            <div class="container">
-                <h2>Nutrimos vidas, cuidamos el planeta.</h2>
-            </div>
-            <div class="container">
-                <div class="three-column-blurbs">
-                    <div class="blurb-item">
-                        <h4>VISIÓN</h4>
-                        <p>Nuestra misión es transformar el sargazo acumulado en las playas de Paracas en fertilizantes orgánicos de alta calidad, reduciendo el impacto ambiental, promoviendo el bienestar de las comunidades locales especialmente de las recolectoras y ofreciendo una alternativa sostenible para la agricultura peruana.</p>
-                    </div>
-                    <div class="blurb-item">
-                        <h4>MISIÓN</h4>
-                        <p>Ser la empresa líder en Perú en la valorización de recursos marinos, reconocida por convertir un problema ambiental en una solución sostenible, impulsando una agricultura más limpia y fortaleciendo la economía local mediante la innovación biotecnológica.</p>
-                    </div>
-                    <div class="blurb-item">
-                        <h4>VALORES</h4>
-                        <p>Sostenibilidad<br>Innovación<br>Responsabilidad<br>Impacto Comunitario<br>Calidad</p>
-                    </div>
-                </div>
-            </div>
+      <div class="et_pb_section et_pb_section_2 et_section_regular">
+        <div class="container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://drive.google.com/file/d/16gjqWOKhQo0YBjvcPFygbDp6-dl7CLLk/view?usp=drive_link"
+            title="Video institucional"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
+      </div>
+
+      <div
+        class="et_pb_section et_pb_section_3 et_pb_with_background et_section_regular"
+      >
+        <div class="container">
+          <h2>Nutrimos vidas, cuidamos el planeta.</h2>
+        </div>
+        <div class="container">
+          <div class="three-column-blurbs">
+            <div class="blurb-item">
+              <h4>VISIÓN</h4>
+              <p>
+                Nuestra misión es transformar el sargazo acumulado en las playas
+                de Paracas en fertilizantes orgánicos de alta calidad,
+                reduciendo el impacto ambiental, promoviendo el bienestar de las
+                comunidades locales especialmente de las recolectoras y
+                ofreciendo una alternativa sostenible para la agricultura
+                peruana.
+              </p>
+            </div>
+            <div class="blurb-item">
+              <h4>MISIÓN</h4>
+              <p>
+                Ser la empresa líder en Perú en la valorización de recursos
+                marinos, reconocida por convertir un problema ambiental en una
+                solución sostenible, impulsando una agricultura más limpia y
+                fortaleciendo la economía local mediante la innovación
+                biotecnológica.
+              </p>
+            </div>
+            <div class="blurb-item">
+              <h4>VALORES</h4>
+              <p>
+                Sostenibilidad<br />Innovación<br />Responsabilidad<br />Impacto
+                Comunitario<br />Calidad
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
     <footer class="main-footer et_pb_section">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="../assets/images/logo-thalassa.webp" alt="Thalassa Bio" width="50" height="60">
-                </div>
-                <div class="footer-contact">
-                    <h4>Contacto</h4>
-                    <p>Email: contacto@thalassa-bio.pe</p>
-                    <p>WhatsApp: +51 952 229 658</p>
-                </div>
-                <div class="footer-links">
-                    <h4>Enlaces</h4>
-                    <ul>
-                        <li><a href="../index.html#productos">Productos</a></li>
-                        <li><a href="#mision">Misión</a></li>
-                        <li><a href="../index.html#contacto">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="footer-social">
-                    <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a>
-                    <a href="https://instagram.com/thalassa-bio" target="_blank">📸</a>
-                    <a href="https://wa.me/51981990314" target="_blank">📱</a>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Thalassa Bio. Todos los derechos reservados.</p>
-            </div>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img
+              src="../assets/images/logo-thalassa.webp"
+              alt="Thalassa Bio"
+              width="50"
+              height="60"
+            />
+          </div>
+          <div class="footer-contact">
+            <h4>Contacto</h4>
+            <p>Email: contacto@thalassa-bio.pe</p>
+            <p>WhatsApp: +51 952 229 658</p>
+          </div>
+          <div class="footer-links">
+            <h4>Enlaces</h4>
+            <ul>
+              <li><a href="../index.html#productos">Productos</a></li>
+              <li><a href="#mision">Misión</a></li>
+              <li><a href="../index.html#contacto">Contacto</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a>
+            <a href="https://instagram.com/thalassa-bio" target="_blank">📸</a>
+            <a href="https://wa.me/51981990314" target="_blank">📱</a>
+          </div>
         </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Thalassa Bio. Todos los derechos reservados.</p>
+        </div>
+      </div>
     </footer>
 
     <script src="../js/scripts.js"></script>
-</body>
+  </body>
 </html>
