--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a>
-                    <a href="https://instagram.com/thalassa-bio" target="_blank">📸</a>
+                    <!-- <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a> -->
+                    <a href="https://www.instagram.com/thalassa_bio?igsh=ejJvaGFtejN2dmUw" target="_blank">📸</a>
                     <a href="https://wa.me/51952229658" target="_blank">📱</a>
                 </div>
             </div>
