--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -169,8 +169,8 @@
             </ul>
           </div>
           <div class="footer-social">
-            <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a>
-            <a href="https://instagram.com/thalassa-bio" target="_blank">📸</a>
+            <!-- <a href="https://facebook.com/thalassa-bio" target="_blank">💙</a> -->
+            <a href="https://www.instagram.com/thalassa_bio?igsh=ejJvaGFtejN2dmUw" target="_blank">📸</a>
             <a href="https://wa.me/51981990314" target="_blank">📱</a>
           </div>
         </div>
