--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div class="et_pb_section et_pb_section_2 et_section_regular">
+      <!-- <div class="et_pb_section et_pb_section_2 et_section_regular">
         <div class="container">
           <iframe
             width="560"
@@ -100,7 +100,7 @@
             allowfullscreen
           ></iframe>
         </div>
-      </div>
+      </div> -->
 
       <div
         class="et_pb_section et_pb_section_3 et_pb_with_background et_section_regular"
