--- a/pages/producto.html
+++ b/pages/producto.html
@@ -40,7 +40,12 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/logo-thalassa.webp" alt="Thalassa Bio" width="50" height="60">
+                     <img
+                      src="../assets/images/logo-thalassa.webp"
+                      alt="Thalassa Bio"
+                      width="50"
+                      height="60"
+                    />
                 </div>
                 <div class="footer-contact">
                     <h4>Contacto</h4>
